@@ -4,6 +4,7 @@
 * Drop support for Django < 5.0.
 * Drop support Python < 3.10.
 * Migration to Poetry.
+* Fix style issues.
 
 0.1.8+dismine.1 - 2022/12/24
 -------------------
